added links to education section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <img src="Images/Duke PA Program.png" class="card-img-top" alt="...">
             <div class="card-body text-center">
             <h3>Duke School of Medicine</h3>
-              <p class="card-text">Click Here (not working yet)</p>
+              <p class="card-text"></p><a href="https://medschool.duke.edu/education/health-professions-education-programs/duke-physician-assistant-program" target="_blank" rel="noopener noreferrer">Show Me </a></p>
             </div>
           </div>
         </div>
@@ -160,13 +160,13 @@
             <img src="Images/new-mexico-highlands-logo2.gif" class="card-img-top" alt="...">
             <div class="car>d-body text-center">
             <h3>New Mexico Highlands University</h3>
-              <p class="card-text">Click Here (not Working yet)</p>
+              <p class="card-text"><a href="https://www.nmhu.edu/landing-facundo-valdez-school-of-social-work/" target="_blank" rel="noopener noreferrer">Show Me </a></p>
             </div>
           </div>
         </div>
       </div> 
      </div>
-     
+     //added links to site for universities.
     </section>
 
     <!--Contact Section-->
