made a change to education

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
       </div> 
      </div>
-     //added links to site for universities.
+      <!--added links to site for universities.-->
     </section>
 
     <!--Contact Section-->
