--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                 <div class="carousel-item">
                   <img src="Images/julia scrubs2.jpg" class="d-block w-200" alt="..." height="800px">
                 </div>
+                <div class="carousel-item">
+                  <img src="Images/JulaPortfolio4.jpg" class="d-block w-200" alt="..." height="800px">
+                </div>
+                <div class="carousel-item">
+                  <img src="Images/JuliaAScrubs 3.jpg" class="d-block w-200" alt="..." height="800px">
+                </div>
+                <div class="carousel-item">
+                  <img src="Images/JuliaScrubs4.jpg" class="d-block w-200" alt="..." height="800px">
+                </div>
               </div>
             </div>
           </div>
