added changes to link for blog and removed skills section

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#skills">Skills</a>
-            </li> 
+            </li>-->
             <li class="nav-item">
               <a class="nav-link" href="#education">Education</a>
             </li> 
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://skippyasyourmoney.blogspot.com/" target="_blank" rel="noopener noreferrer" >My Blog</a>
+              <a class="nav-link" href="https://jcpac2024.blogspot.com/" target="_blank" rel="noopener noreferrer" >My Blog</a>
             </li>                
         </div>
       </div>
@@ -118,7 +118,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills">
+   <!-- <section id="skills">
       <div class="container my-5 py-5">
         <div class="row mb-5">
           <div class="col-12">
@@ -147,7 +147,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Education Section -->
     <section id="education">
