--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               Thank you for visiting my site!  My name is Julia and I am currently a Physician Assistant Student (PA-S) at Duke University. I am what most would consider a "non-traditional" student, pursuing medicine as a second career.  What lead me to this path is working as a Licensed Clinical Social Worker (LCSW) in the medical field for several years.  I had the joy and privilege of working as a Case Manager and Counselor in Home Hospice, Acute/Inpatient and Primary Care settings.  I relished in an interdisciplinary team setting with a common goal of providing top notch patient care. Over the years, I became inspired to go deeper into medicine and take on the role of medical Provider.  In 2014, I worked in a large acute care hospital in Albuquerque, NM.  During this time, I was introduced to the PA profession and knew that this is something I would pursue one day.  A few years passed before I made the decision to start completing the pre-requisite courses required for admission to PA programs.  In addition to completing courses while working full time, I was fortunate to be able to shadow PA's in three different specialties and engage in meaningful volunteer work on the weekends.  I am fortunate to say that as a first time applicant, I was accepted to six PA programs and waitlisted at two.  I feel honored and grateful to be joining this amazing profession.  My hobbies include cooking, baking, hiking, yoga, weight lifting, reading about true crime, meditation, traveling, spending time with family, friends and my cat Ronin.  Feel free to check back as I document my journey towards becoming a PA-C!     
             </p>
             <div class="buttons">
-              <a class="btn btn-outline-warning px-5 py-2" href={resume} download={resume}
-                >Download Resume</a>
+              <!--<a class="btn btn-outline-warning px-5 py-2" href={resume} download={resume}
+                >Download Resume</a>-->
               <a class="btn btn-warning text-white px-5 py-2" href="#contact">Contact</a>
             </div>
           </div>
