--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
             <form action="https://formsubmit.co/2aff052e5d487f8afdf54c2bad03bd83" method="POST">
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name Here">
+                <input type="text" class="form-control" name="name" id="exampleFormControlInput1" placeholder="Name Here">
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                <textarea class="form-control" name="your, message" id="exampleFormControlTextarea1" rows="5"></textarea>
               </div>
               <button type="submit" class="btn btn-outline-warning" onclick="alert('Message Sent')">Send Message</button>
             </form>
