made some changes

--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
         <div class="row">
           <div class="col-md-6 mx-auto">
             <form action="https://formsubmit.co/2aff052e5d487f8afdf54c2bad03bd83" method="POST">
+              <!--Honeypot-->
+              <input type="text" name="_honey" style="display:none;">
+
+              <!--Disable Captcha-->
+              <input type="hidden" name="_captcha" value="false">
+
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Full Name</label>
                 <input type="text" class="form-control" name="name" id="exampleFormControlInput1" placeholder="Name Here">
