--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="Images/Julia business1.jpg" class="d-block w-100" alt="..." height="800px">
+                  <img src="Images/Julia Business1.jpg" class="d-block w-100" alt="..." height="800px">
                 </div>
                 <div class="carousel-item">
                   <img src="Images/Julia Scrubs1.jpg" class="d-block w-200" alt="..." height="800px">
