removed inactive buttons

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           <div class="col-md-6 d-flex flex-column justify-content-center">
               <h3 class="text-warning">Physician Assistant Student</h3> 
               <h1 class="display-1 fw-bold"> I'M JULIA <br> CHAVEZ</h1>
-              <div class="buttons mt-4">
+              <!--<div class="buttons mt-4">
                   <button class="btn btn-outline-warning px-4 py-2">Hire Me</button>
                   <button class="btn btn-warning text-white px-4 py-2">About</button>
-              </div>
+              </div>-->
           </div>
           <div class="col-md-6">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
