added university and image

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
        </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="card p-3" style="width: 20rem;">
+          <div class="card p-3" style="width: 25rem;">
             <img src="Images/Duke PA Program.png" class="card-img-top" alt="...">
             <div class="card-body text-center">
             <h3>Duke School of Medicine</h3>
@@ -169,11 +169,20 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card p-4" style="width: 18rem;">
+          <div class="card p-4" style="width: 25rem;">
             <img src="Images/new-mexico-highlands-logo2.gif" class="card-img-top" alt="...">
             <div class="car>d-body text-center">
             <h3>New Mexico Highlands University</h3>
               <p class="card-text"><a href="https://www.nmhu.edu/landing-facundo-valdez-school-of-social-work/" target="_blank" rel="noopener noreferrer">Show Me </a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4" style="width: 25rem;">
+            <img src="Images/JIU-logo-w-tag.gif" class="card-img-top" alt="...">
+            <div class="car>d-body text-center">
+            <h3>Jones International University</h3>
+              <p class="card-text"><a href="https://jiue.org/" target="_blank" rel="noopener noreferrer">Show Me </a></p>
             </div>
           </div>
         </div>
