added some photos to main site

--- a/index.html
+++ b/index.html
@@ -69,17 +69,20 @@
                   <img src="Images/Julia Scrubs1.jpg" class="d-block w-200" alt="..." height="800px">
                 </div>
                 <div class="carousel-item">
-                  <img src="Images/julia scrubs2.jpg" class="d-block w-200" alt="..." height="800px">
-                </div>
-                <div class="carousel-item">
                   <img src="Images/JulaPortfolio4.jpg" class="d-block w-200" alt="..." height="800px">
                 </div>
                 <div class="carousel-item">
-                  <img src="Images/JuliaAScrubs 3.jpg" class="d-block w-200" alt="..." height="800px">
+                  <img src="Images/Julia Scrubs8.jpg" class="d-block w-200" alt="..." height="800px">
                 </div>
                 <div class="carousel-item">
-                  <img src="Images/JuliaScrubs4.jpg" class="d-block w-200" alt="..." height="800px">
+                  <img src="Images/Julia Scrubs7.jpg" class="d-block w-200" alt="..." height="800px">
                 </div>
+                <div class="carousel-item">
+                  <img src="Images/Julia Scrubs6.jpg" class="d-block w-200" alt="..." height="800px">
+                </div>
+                <div class="carousel-item">
+                  <img src="Images/Julia Scrubs5.jpg" class="d-block w-200" alt="..." height="800px">
+                </div>                              
               </div>
             </div>
           </div>
